# Simple_texteditor

./: .gitignore  CMakeLists.txt
header/: wx_frame.h
src/: wx_frame.cpp
